# dateberry

./: .gitignore  Cargo.toml  Justfile  README.md
app/: index.html  package.json  vite.config.ts
app/src/: App.svelte  global.css  main.ts  store.ts
app/src/lib/: EventForm.svelte  Reminder.svelte  Timezone.svelte
examples/: favicon.rs  local.rs
src/: favicon.rs  index.html  lib.rs  main.rs  request_calendar.rs  start_record.rs
